turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: error: type mismatch;
 found   : Int
 required: java.awt.Color
  colore(col)
         ^